Integraçao com o front
