# swagger.yaml
@@ -96,6 +96,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /posts/admin:
+    get:
+      summary: "Lista todas as postagens (Visão Administrativa)"
+      description: "Retorna uma lista de todas as postagens criadas, acessível apenas para administradores."
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: "Lista de postagens"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+        401:
+          description: "Token de autorização inválido ou ausente"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: "Erro interno ao tentar recuperar a lista de postagens"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     post:
       summary: "Cria um novo post"
       description: "Cria um novo post no sistema."
